# mcp-db-analyst-assignment

./: .gitignore  README.md  architecture.txt  pyproject.toml  scan_imports.py
agent/: agent.py  agent_loop.py  requirements.txt  ui.py
common/: prompts.py
server/: init_db.py  server.py
src/: .coverage
src/agent/: agent_loop.py  agent_main.py  llm_client.py  mcp_client.py  ui.py
src/common/: prompts.py
src/server/: db.sqlite3
src/tests/: test_agent_end_to_end.py  test_init_db.py  test_llm.py  test_readonly.py  test_server.py
tests/: requirements.txt  test_agent_end_to_end.py  test_llm.py  test_readonly.py  test_valid_queries.py
