# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_db_analyst_assignment"
version = "0.1.0"
description = "MCP-style Database Analyst Agent take-home assignment"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}               # optional, but good practice
authors = [{name = "Alexey Butov"}]    # optional

[tool.setuptools.packages.find]
where = ["."]
include = ["agent.*", "common.*", "server.*", "tests.*"]
exclude = ["*.tests", "*.__pycache__"]   # optional cleanup

[tool.pytest.ini_options]
# Very important: tells pytest where to look for tests and what to consider a test
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short"               # nicer output by default

[tool.coverage.run]
source = ["agent", "common", "server"]
omit = ["*/tests/*", "*/__init__.py"]